welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: '(' expected but identifier found.
  for dia
      ^Diagonal:11: error: illegal start of simple expression
} 
^